--- a/404.html
+++ b/404.html
@@ -11,9 +11,9 @@
       type="image/x-icon"
       href="https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png"
     />
-    <link rel="stylesheet" href="/dumi-template/umi.3ec1f225.css" />
+    <link rel="stylesheet" href="/stickerwu-templates/umi.3ec1f225.css" />
     <script>
-      window.routerBase = "/dumi-template/";
+      window.routerBase = "/stickerwu-templates/";
     </script>
     <script>
       //! umi version: 3.5.28
@@ -33,6 +33,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/dumi-template/umi.62e5737a.js"></script>
+    <script src="/stickerwu-templates/umi.e1e6ffb1.js"></script>
   </body>
 </html>
